--- a/views/account/signup.ejs
+++ b/views/account/signup.ejs
@@ -9,12 +9,12 @@
             </div>
 
             <div class="form-group">
-                <label>Mot de passe</label>
+                <label>Password</label>
                 <input type="password" name="password"/>
             </div>
 
             <div class="form-group">
-                <label>Confirmer mot de passe</label>
+                <label>Confirm password</label>
                 <input type="password" name="cpassword"/>
             </div>
 
