--- a/views/shared/navbar.ejs
+++ b/views/shared/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
     <a href="/ticket" class="nav-link">Tickets</a>
-    <a href="/ticket/create" class="nav-link">Créer Ticket</a>
-    <a href="/user/signout" class="nav-link">Me déconnecter</a>
+    <a href="/ticket/create" class="nav-link">Create Ticket</a>
+    <a href="/user/signout" class="nav-link">Logout</a>
 </nav>
