--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,15 +1,78 @@
 nav {
-	background-color: #e1e1e1;
+	background-color: #4B0082;
 	display: flex;
 	width: 100%;
 	height: 70px;
 	align-items: center;
+	border-radius: 15px;
+	font-family: 'Anton', sans-serif;
+
 }
 
 nav a {
-	color: #fff;
-	font-weight: bold;
+	font-size: 23px;
 	text-decoration: none;
 	margin-left: 100px;
 	cursor: pointer;
+}
+nav a {
+	color: #FFFFFF;
+}
+
+nav a:hover {
+	color: #E3BDFF;
+}
+.capitalize{
+	text-transform: capitalize;
+}
+
+/* My css rules */
+.title {
+	color: #4B0082;
+	text-align: center;
+	margin-top: 40px;
+}
+
+.completedIcon {
+	color: #00824b;
+}
+
+.notCompletedIcon {
+color: #be0000;
+}
+
+
+input,textarea{
+	padding: 4px;
+
+}
+
+select {
+	width: 300px;
+	padding:4px;
+}
+
+
+.subtitle {
+	font-size: 18px;
+	color: #4B0082;
+	font-weight: bold;
+}
+
+.show-page {
+	color: #000000;
+}
+
+.comments {
+	margin-top: -15px;
+	max-height: 150px;
+	overflow-y: auto;
+}
+
+.comment {
+	margin-bottom: 0px;
+	margin-top: 6px;
+	background-color: lightgray;
+	border-radius: 20px;
+	padding:4px;
 }
