--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,7 +9,7 @@
             </div>
 
             <div class="form-group">
-                <label>Mot de passe</label>
+                <label>Password</label>
                 <input type="password" name="password"/>
             </div>
 
